# indexer-clob-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/indexer-api/: Cargo.toml
crates/indexer-api/src/: config.rs  lib.rs  server.rs
crates/indexer-api/src/schema/: mod.rs  query.rs
crates/indexer-api/src/schema/types/: balance.rs  candle.rs  mod.rs  order.rs  pool.rs  trade.rs  user.rs
crates/indexer-candles/: Cargo.toml
crates/indexer-candles/src/: aggregator.rs  bucket.rs  cache.rs  flusher.rs  interval.rs  lib.rs
crates/indexer-core/: Cargo.toml
crates/indexer-core/src/: config.rs  error.rs  lib.rs
crates/indexer-core/src/events/: balance_manager.rs  mod.rs  order_book.rs  pool_manager.rs
crates/indexer-core/src/types/: balance.rs  mod.rs  order.rs  pool.rs  trade.rs
crates/indexer-db/: Cargo.toml
crates/indexer-db/src/: config.rs  lib.rs  pool.rs  writer.rs
crates/indexer-db/src/migrations/: 0001_initial_schema.sql
crates/indexer-db/src/models/: balance.rs  candle.rs  currency.rs  mod.rs  order.rs  order_history.rs  pool.rs  trade.rs  user.rs
crates/indexer-db/src/repositories/: balance.rs  candle.rs  mod.rs  order.rs  pool.rs  sync_state.rs  trade.rs  user.rs
crates/indexer-metrics/: Cargo.toml
crates/indexer-metrics/src/: config.rs  counters.rs  gauges.rs  histograms.rs  lib.rs  server.rs
crates/indexer-processor/: Cargo.toml
crates/indexer-processor/src/: lib.rs  pipeline.rs
crates/indexer-processor/src/handlers/: balance_events.rs  mod.rs  order_cancelled.rs  order_matched.rs  order_placed.rs  order_updated.rs  pool_created.rs
crates/indexer-processor/src/sinks/: candle.rs  database.rs  mod.rs  redis.rs  traits.rs
crates/indexer-redis/: Cargo.toml
crates/indexer-redis/src/: channels.rs  config.rs  connection.rs  debouncer.rs  lib.rs  messages.rs  publisher.rs
crates/indexer-store/: Cargo.toml
crates/indexer-store/src/: balances.rs  lib.rs  orders.rs  pools.rs  store.rs  sync_state.rs  trades.rs  ws_event_buffer.rs
crates/indexer-sync/: Cargo.toml
crates/indexer-sync/src/: adaptive_batch.rs  engine.rs  gap_detector.rs  historical.rs  lib.rs  provider.rs  realtime.rs  rpc_verifier.rs  telegram.rs
deployments/: 6343.json
src/: main.rs
