[package]
name = "indexer-candles"
version.workspace = true
edition.workspace = true

[dependencies]
indexer-core.workspace = true
indexer-db.workspace = true
indexer-redis.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
