[package]
name = "indexer-processor"
version.workspace = true
edition.workspace = true

[dependencies]
indexer-core.workspace = true
indexer-store.workspace = true
indexer-db.workspace = true
indexer-redis.workspace = true
indexer-candles.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
